# investing-agent

./: .gitignore  AGENTS.md  API_SAFETY_SETTINGS.md  CLAUDE.md  ENV_SETUP.md  EVIDENCE_PIPELINE_GUIDE.md  LICENSE  LLM_INTEGRATION_GUIDE.md  Makefile  README.md  REPORT_QUALITY_EVALUATION_README.md  TROUBLESHOOTING.md  codex.md  dbot-paper.md  pyproject.toml  pytest.ini  setup.py
.claude/agents/: report-eval-developer.md
.claude/tasks/: dbot_quality_gap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
.venv312/: pyvenv.cfg
canaries/AAPL/: golden.json  inputs.json
canaries/BYD/: golden.json  inputs.json  insights.json
canaries/MSFT/: golden.json  inputs.json
canaries/SYN/: inputs.json
configs/scenarios/: aggressive.yaml  baseline.yaml  cautious.yaml
dbot-paper/: BYD_report.md  paper.bbl  paper.tex  ref.bib  zotero.bib
docs/: ALGORITHM.md  CANARIES.md  PROJECTS.md  PROJECT_BOARD.md  PROMPTS.md  ROADMAP.md  SCENARIOS.md  UI_ARCHITECTURE.md  VALUATION_MATH.md
evals/: config.yaml
evals/evidence_pipeline/: test_driver_accuracy.py  test_evidence_integration.py
examples/: llm_integration_example.py
examples/plans/: meta_baseline.yaml
investing_agent/: config.py
investing_agent/agents/: beta_calculation.py  bridge_validators.py  comparables.py  computational_validators.py  consensus.py  critic.py  critic_llm.py  fx_normalization.py  html_writer.py  market.py  multiples_calculation.py  news.py  peer_selection.py  plotting.py  prompt_engineering.py  report_assembler.py  research_llm.py  research_unified.py  router.py  router_enhanced.py  section_orchestrator.py  sensitivity.py  table_generator.py  (+12 more)
plans/: byd.json  byd.yaml
prompts/: README.md
scripts/: backtest.py  build_inputs.py  check_docs.py  compare_llm_costs.py  eval_quality.py  eval_report.py  evaluation_dashboard_demo.py  evaluation_dashboard_demo_mock.py  generate_comparison_report.py  generate_full_meta_report.sh  generate_full_report.py  generate_interactive_report.py  generate_professional_meta.py  generate_professional_report.py  generate_report_minimalist.py  make_index.py  quick_test.py  report.py  report_legacy.py  report_main.py  report_with_evidence.py  router_demo.py  router_enhanced_demo.py  run_batch.py  run_synthetic.py  safe_report_generator.py  setup_env.py  supervisor.py  test_fixed_evaluation.py  test_llm.py  test_minimal.py  test_openai_key.py  test_real_evaluation.py  write_canary.py
(+211 files in other folders)
